asteria/core/tests/errors/elaboration_errors/too_many_type_arguments_in_constructor_term.asteriacore
data T where
   | MkT {a : Type} : Test$T()
   ;;

x : Test$T()
  = MkT(Test$T(), Test$T();)
  ;;
